# mcp-civic-data

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/plans/: 2026-01-12-mcp-govt-api-design.md  2026-01-12-mcp-govt-api-implementation.md
src/mcp_govt_api/: __init__.py  __main__.py  server.py
src/mcp_govt_api/tools/: __init__.py  census.py  datagov.py  earthquakes.py  economics.py  eu_data.py  firms.py  nasa.py  openaq.py  safecast.py  space_weather.py  usgs_water.py  weather.py
src/mcp_govt_api/utils/: __init__.py  config.py  http.py
tests/: test_basic.py
