[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-civic-data"
version = "0.1.0"
description = "MCP server for free government and open data APIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-civic-data = "mcp_govt_api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_govt_api"]
